# Knowledge_Acquisition

./: .env.example  .gitignore  404.html  CHANGELOG.md  README.md  analisis_video.json  app.py  diseño_avanzado_de_Base_de_Conocimientos.txt  docker-compose.yml  environment.yml  index.html  knowledge_base.json  main.py  mejoras_objetivo_proyecto.txt  mkdocs.yml  obetivo_del_proyecto.txt  requirements-scraping.txt  requirements.txt  setup.py  setup.sh  sitemap.xml  update_repo.sh
agents/specialized/travel_agent/: README.md  objetivo.txt  pyproject.toml  requirements.txt
agents/specialized/travel_agent/config/providers/: aero.json  despegar.json  (+1 more)
agents/specialized/travel_agent/core/: agent.py  agent_observer.py  agent_orchestrator.py  analysis_engine.py  browser_manager.py  budget_engine.py  cache_manager.py  config.py  opportunity_tracker.py  package_analyzer.py  price_monitor.py  provider_manager.py  recommendation_engine.py  sales_assistant.py  schemas.py  session_manager.py  storage_manager.py  visualization_engine.py
agents/specialized/travel_agent/memory/: __init__.py  supabase.py
agents/specialized/travel_agent/scripts/: create_search_function.sql  init_supabase.sql  load_sample_data.py  search_packages.py  setup_environment.sh  test_db.py  update.sh  update_repo.sh
agents/specialized/travel_agent/templates/: default.html  profiles.json
agents/specialized/travel_agent/tests/: conftest.py  test_analysis_engine.py  test_browser_manager.py  test_cache_manager.py  test_package_analyzer.py  test_providers.py  test_sales_assistant.py  test_travel_agent.py
(+285 files in other folders)
