[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "travel_agent"
version = "0.1.0"
description = "AI Travel Agent for automated travel planning and booking"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.4",
    "playwright==1.50.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "browser-use==0.1.37"
]

[tool.setuptools.packages.find]
where = ["../../.."]  # Point to the root of agents module
include = ["agents.*"]
